Integrate upstream 1.21.11 with Paper release features